--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build] 
   publish = "public"
-  command = "hugo"
+  command = "hugo server"
 
 [context.production.environment]
   HUGO_VERSION = "0.119.0" # if older, use format: 0.53 (no trailing zero)
